<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutomaticMode">

    <View
        android:id="@+id/bottom_divider_S"
        android:layout_width="478dp"
        android:layout_height="1dp"
        android:layout_marginBottom="75dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/smart_button_A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/purple_500"
        android:text="@string/smart_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/manual_button_A"
        app:layout_constraintStart_toEndOf="@+id/automatic_button_A"
        app:layout_constraintTop_toBottomOf="@+id/bottom_divider_S" />

    <Button
        android:id="@+id/automatic_button_A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/purple_700"
        android:text="@string/automatic_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/smart_button_A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_divider_S" />

    <Button
        android:id="@+id/manual_button_A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:text="@string/manual_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/smart_button_A"
        app:layout_constraintTop_toBottomOf="@+id/bottom_divider_S" />
</androidx.constraintlayout.widget.ConstraintLayout>